# education-manager

./: Cargo.toml  README.md
client/: .env  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/Model/: userModel.ts
client/src/components/CascaderComponent/: CascaderComponent.tsx
client/src/services/: classService.ts  index.ts  userService.ts
client/src/utils/: utils.ts
server/: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  start-server
server/src/: database.rs  layer.rs  main.rs  model.rs  router.rs  service.rs
server/src/model/: database_model.rs
server/src/model/database_model/: normal_model.rs  record_link_model.rs
server/src/service/: admin_service.rs  general_service.rs  lecturer_service.rs  public_service.rs
server/src/service/admin_service/: add_lecturers_to_class.rs  add_students_to_class.rs  class_detail.rs  create_class.rs  create_user.rs  lecturer_detail.rs  lecturer_not_in_any_class.rs  list_class.rs  list_lecturer.rs  list_student.rs  remove_class.rs  remove_lecturers_from_class.rs  remove_students_from_class.rs  remove_user.rs  student_detail.rs  student_not_in_any_class.rs  update_class.rs
server/src/service/general_service/: profile.rs  update_profile.rs
server/src/service/lecturer_service/: class_detail.rs
server/src/service/student_service/: class_detail.rs
src/: database.rs  main.rs  model.rs  router.rs  service.rs
src/model/: database_model.rs
src/model/database_model/: normal_model.rs  record_link_model.rs
src/service/: public_service.rs
(+20 files in other folders)
