[package]
name = "education-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = "0.4.31"
jsonwebtoken = "9.0.0"
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
serde_with = "3.4.0"
surrealdb = {version = "1.0.0", features = ["protocol-http"]}
time = "0.3.30"
tokio = {version ="1.33.0", features = ["full"]}
tower-http = {version = "0.4.4", features = ["cors"]}



[profile.release]
strip = true
